fix button spacing

--- a/web/components/rename-phase-main/rename-phase-main.less
+++ b/web/components/rename-phase-main/rename-phase-main.less
@@ -6,7 +6,7 @@
 {
     .header-zone
     {
-        padding: 0 18px;
+        padding: 0 8px;
         align-items: center;
 
         .inputs-zone
